--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=barber-shop-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/barberShopDB
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+api.security.token.secret=${JWT_SECRET: my-secret-key}
