Fix: Update .gitignore to exclude environment.ts file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ barber-shop-ui/.angular/
 barber-shop-ui/.vscode/
 barber-shop-ui/node_modules/
 barber-shop-ui/package-lock.json
-
+barber-shop-ui/src/environments/environment.ts
 barber-shop-api/.idea/
 barber-shop-api/target/
 
