--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 api.security.token.secret=${JWT_SECRET: my-secret-key}
+api.config.cors.origin=${CORS_ORIGIN: http://localhost:4200}
