--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=barber-shop-api
-spring.datasource.url=jdbc:postgresql://localhost:5432/barberShopDB
+spring.datasource.url=jdbc:postgresql://${DB_ADDRESS: localhost}:${DB_PORT}/${DB_NAME:barberShopDB}
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
