--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=barber-shop-api
 spring.datasource.url=jdbc:postgresql://${DB_ADDRESS:localhost}:${DB_PORT:5432}/${DB_NAME:barberShopDB}
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
