Fix: Update sourceLocale in angular.json from 'pt-BR' to 'pt'

--- a/barber-shop-ui/angular.json
+++ b/barber-shop-ui/angular.json
@@ -5,7 +5,7 @@
   "projects": {
     "barber-shop-ui": {
       "i18n":{
-        "sourceLocale": "pt-BR"
+        "sourceLocale": "pt"
       },
       "projectType": "application",
       "schematics": {
