Fix: ajust dockerfile to update npm before try to build

--- a/barber-shop-ui/Dockerfile
+++ b/barber-shop-ui/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Copia os arquivos necessários para a construção
 COPY . .
 
+RUN npm install -g npm@latest
 # Instalar as dependências do projeto
 RUN npm install
 
