--- a/barber-shop-api/Dockerfile
+++ b/barber-shop-api/Dockerfile
@@ -1,15 +1,17 @@
 FROM openjdk:17-jdk-alpine
 
-ARG JAR_FILE=target/*.jar
+WORKDIR /app
+
+COPY target/*.jar app.jar
+
+COPY src/main/resources/keystore/keystore.p12 /app/keystore.12
 
 #ENV DB_ADDRESS=172.17.0.2
 #ENV DB_PORT=5432
-# ENV DB_NAME=
-# ENV JWT_SECRET=
+#ENV DB_NAME=
+#ENV JWT_SECRET=
 #ENV CORS_ORIGIN=172.17.0.1
 
-EXPOSE 8080
+EXPOSE 8443
 
-COPY ${JAR_FILE} app.jar
-
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
