--- a/barber-shop-ui/nginx.conf
+++ b/barber-shop-ui/nginx.conf
@@ -6,7 +6,10 @@ http {
         include /etc/nginx/mime.types;
     server {
         listen 80 ;
-        listen 443;
+        listen [::]:80 ;
+        listen 443 ssl;
+        listen [::]:443 ssl;
+
         error_page 404 /index.html;
 
         location / {
@@ -17,7 +20,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass https://bshop-api.railway.internal:8443/;
+            proxy_pass https://backend-barbershop.railway.internal:8443/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
