--- a/barber-shop-ui/nginx.conf
+++ b/barber-shop-ui/nginx.conf
@@ -7,8 +7,6 @@ http {
     server {
         listen 80 ;
         listen [::]:80 ;
-        listen 443 ssl;
-        listen [::]:443 ssl;
 
         error_page 404 /index.html;
 
@@ -20,7 +18,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass https://backend-barbershop.railway.internal:8443/;
+            proxy_pass https://[backend-barbershop.railway.internal]:8443/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
