fix: update SSL key-store path in application properties

--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -11,7 +11,7 @@ api.config.cors.origin=${CORS_ORIGIN:http://localhost:4200}
 
 server.port=${SERVER_PORT:8443}
 server.address=::
-server.ssl.key-store=classpath:${KEY_STORE:keystore.p12}
+server.ssl.key-store=classpath:keystore/${KEY_STORE:keystore.p12}
 server.ssl.key-store-password=${SSL_PASSWORD:SenhaSegura123}
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=${CERT_NAME:my-certificate}
