chore: comment out SSL configuration in application properties

--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 api.config.cors.origin=${CORS_ORIGIN:http://localhost:4200}
 
-server.port=${SERVER_PORT:8443}
-server.address=::
-server.ssl.key-store=classpath:keystore/${KEY_STORE:keystore.p12}
-server.ssl.key-store-password=${SSL_PASSWORD:SenhaSegura123}
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=${CERT_NAME:my-certificate}
+#server.port=${SERVER_PORT:8443}
+#server.address=::
+#server.ssl.key-store=classpath:keystore/${KEY_STORE:keystore.p12}
+#server.ssl.key-store-password=${SSL_PASSWORD:SenhaSegura123}
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=${CERT_NAME:my-certificate}
