chore: update Dockerfile and application.properties for improved file paths and cleanup

--- a/barber-shop-api/Dockerfile
+++ b/barber-shop-api/Dockerfile
@@ -2,9 +2,9 @@ FROM maven:3.9.7-sapmachine-17 AS build
 
 WORKDIR /app
 
-COPY pom.xml .
+COPY ./pom.xml .
 
-COPY src ./src
+COPY ./src ./src
 
 RUN mvn clean package -DskipTests
 
@@ -13,8 +13,6 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 COPY target/*.jar app.jar
-
-COPY src/main/resources/keystore/keystore.p12 /app/keystore.12
 
 COPY --from=build /app/target/*.jar app.jar
 
