--- a/barber-shop-api/src/main/resources/application.properties
+++ b/barber-shop-api/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=barber-shop-api
-spring.datasource.url=jdbc:postgresql://${DB_ADDRESS:localhost}:${DB_PORT:5432}/${DB_NAME:barberShopDB}
+spring.datasource.url=jdbc:postgresql://${DB_ADDRESS:localhost}:${DB_PORT:5432}/${DB_NAME:barbershopbd}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.jpa.hibernate.ddl-auto=update
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:postgresql://${DB_ADDRESS:localhost}:${DB_PORT:5432}/${DB_NAME:barbershopbd}
+spring.flyway.user=${DB_USERNAME:postgres}
+spring.flyway.password=${DB_PASSWORD:postgres}
+spring.flyway.locations=classpath:db/migration
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
